fix: Increase contrast in editor window (#25)
* fix: Increase contrast in editor window

* Fixup theme colors

* Remove unused variable

* Ensure OS-level theme preference is respected

--- a/src/assets/scss/tokens/themes.scss
+++ b/src/assets/scss/tokens/themes.scss
@@ -90,29 +90,46 @@
     --hero-background-color: var(--color-neutral-25);
     --footer-background-color: var(--color-neutral-25);
     --outline-color: var(--color-brand);
+
+    --editor-string-color: var(--color-warning-800);
+    --editor-comment-color: var(--color-success-700);
+    --editor-keyword-color: var(--color-primary-900);
+    --editor-name-color: var(--color-primary-700);
+    --editor-bracket-match-outline-color: var(--color-neutral-200);
+    --editor-bracket-match-background-color: var(--color-neutral-100);
+    --editor-bracket-match-color: none;
+    --editor-bracket-no-match-outline-color: var(--color-rose-500);
+    --editor-bracket-no-match-background-color: none;
+    --editor-bracket-no-match-color: none;
 }
 
 @media (prefers-color-scheme: dark) {
-   --body-background-color: var(--color-neutral-900);
-   --body-text-color: var(--color-neutral-300);
-   --headings-color: #fff;
+    --body-background-color: var(--color-neutral-900);
+    --body-text-color: var(--color-neutral-300);
+    --headings-color: #fff;
 
-   --divider-color: var(--color-neutral-600);
-   --border-color: var(--color-neutral-500);
+    --divider-color: var(--color-neutral-600);
+    --border-color: var(--color-neutral-500);
 
-   --icon-color: var(--body-text-color);
-   --dark-icon-color: #fff;
-   --link-color: var(--color-primary-400);
+    --icon-color: var(--body-text-color);
+    --dark-icon-color: #fff;
+    --link-color: var(--color-primary-400);
 
-   --lighter-background-color: var(--color-neutral-800);
-   --lightest-background-color: var(--color-neutral-800);
-   --docs-lightest-background-color: var(--color-neutral-800);
-   --hero-background-color: var(--color-neutral-800);
-   --footer-background-color: var(--color-neutral-800);
-   --outline-color: #fff;
+    --lighter-background-color: var(--color-neutral-800);
+    --lightest-background-color: var(--color-neutral-800);
+    --docs-lightest-background-color: var(--color-neutral-800);
+    --hero-background-color: var(--color-neutral-800);
+    --footer-background-color: var(--color-neutral-800);
+    --outline-color: #fff;
+
+    --editor-string-color: var(--color-warning-300);
+    --editor-comment-color: var(--color-success-500);
+    --editor-keyword-color: var(--color-primary-500);
+    --editor-name-color: var(--color-primary-300);
+    --editor-bracket-match-outline-color: var(--color-neutral-600);
+    --editor-bracket-match-background-color: var(--color-neutral-700);
+    --editor-bracket-match-color: var(--color-neutral-25);
 }
-
-
 
 html[data-theme="light"] {
     --body-background-color: #fff;
@@ -133,6 +150,14 @@ html[data-theme="light"] {
     --hero-background-color: var(--color-neutral-25);
     --footer-background-color: var(--color-neutral-25);
     --outline-color: var(--color-brand);
+
+    --editor-string-color: var(--color-warning-800);
+    --editor-comment-color: var(--color-success-700);
+    --editor-keyword-color: var(--color-primary-900);
+    --editor-name-color: var(--color-primary-700);
+    --editor-bracket-match-outline-color: var(--color-neutral-200);
+    --editor-bracket-match-background-color: var(--color-neutral-100);
+    --editor-bracket-match-color: none;
 }
 
 html[data-theme="dark"] {
@@ -153,4 +178,12 @@ html[data-theme="dark"] {
     --hero-background-color: var(--color-neutral-800);
     --footer-background-color: var(--color-neutral-800);
     --outline-color: #fff;
+
+    --editor-string-color: var(--color-warning-300);
+    --editor-comment-color: var(--color-success-500);
+    --editor-keyword-color: var(--color-primary-500);
+    --editor-name-color: var(--color-primary-300);
+    --editor-bracket-match-outline-color: var(--color-neutral-600);
+    --editor-bracket-match-background-color: var(--color-neutral-700);
+    --editor-bracket-match-color: var(--color-neutral-25);
 }
